# learning-blockchain-with-python

./: .buildinfo  CONTRIBUTING.md  LICENSE  README.md  a_basic_blockchain.html  genindex.html  index.html  intro.html  notes.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  web3.html
.github/workflows/: deploy.yml
_sources/: a_basic_blockchain.ipynb  index.md  intro.md
book/: _config.yml  _toc.yml  notes.ipynb  web3.ipynb
book/_build/.doctrees/: environment.pickle  intro.doctree  notes.doctree
book/_build/html/: .buildinfo  genindex.html  notes.html  search.html  searchindex.js
book/_build/jupyter_execute/: notes.ipynb  notes.py
